added different stories for table booking

--- a/dev/data/nlu/nlu_general.yml
+++ b/dev/data/nlu/nlu_general.yml
@@ -97,6 +97,7 @@ nlu:
     - is it cold if we sit outside
     - are threre heaters for the places outside
     - can we sit outside
+    - is it cold if we sit outside
 
 - intent: goodbye
   examples: |
