--- a/dev/data/stories.yml
+++ b/dev/data/stories.yml
@@ -20,157 +20,8 @@ stories:
   - intent: goodbye
   - action: utter_goodbye
 
-- story: interactive_story_1
-  steps:
-  - intent: book_table
-  - action: table_booking_form
-  - active_loop: table_booking_form
-  - slot_was_set:
-    - requested_slot: num_people
-  - intent: inform_table_booking
-    entities:
-    - num_people: '5'
-  - slot_was_set:
-    - num_people: '5'
-  - action: table_booking_form
-  - slot_was_set:
-    - num_people: '5'
-  - slot_was_set:
-    - requested_slot: time
-  - intent: inform_table_booking
-    entities:
-    - time: 7:30
-  - slot_was_set:
-    - time: 7:30
-  - action: table_booking_form
-  - slot_was_set:
-    - time: 7:30
-  - slot_was_set:
-    - requested_slot: inside_outside
-  - intent: inform_table_booking
-    entities:
-    - inside_outside: outside
-  - slot_was_set:
-    - inside_outside: outside
-  - action: table_booking_form
-  - slot_was_set:
-    - inside_outside: outside
-  - slot_was_set:
-    - requested_slot: client_name
-  - intent: inform_client_name
-    entities:
-    - client_name: Peter
-  - slot_was_set:
-    - client_name: Peter
-  - action: table_booking_form
-  - slot_was_set:
-    - client_name: Peter
-  - slot_was_set:
-    - requested_slot: null
-  - active_loop: null
-  - action: utter_table_slots
-
-- story: interactive_story_1
-  steps:
-  - intent: book_table
-  - action: table_booking_form
-  - active_loop: table_booking_form
-  - slot_was_set:
-    - requested_slot: num_people
-  - intent: inform_table_booking
-    entities:
-    - num_people: '4'
-  - slot_was_set:
-    - num_people: '4'
-  - action: table_booking_form
-  - slot_was_set:
-    - num_people: '4'
-  - slot_was_set:
-    - requested_slot: time
-  - intent: inform_table_booking
-    entities:
-    - time: 7:30
-  - slot_was_set:
-    - time: 7:30
-  - action: table_booking_form
-  - slot_was_set:
-    - time: 7:30
-  - slot_was_set:
-    - requested_slot: inside_outside
-  - intent: inform_table_booking
-    entities:
-    - inside_outside: outside
-  - slot_was_set:
-    - inside_outside: outside
-  - action: table_booking_form
-  - slot_was_set:
-    - inside_outside: outside
-  - slot_was_set:
-    - requested_slot: client_name
-  - intent: inform_client_name
-    entities:
-    - client_name: Julia
-  - slot_was_set:
-    - client_name: Julia
-  - action: table_booking_form
-  - slot_was_set:
-    - client_name: Julia
-  - slot_was_set:
-    - requested_slot: null
-  - active_loop: null
-  - action: utter_table_slots
-
-- story: interactive_story_1
-  steps:
-  - intent: book_table
-  - action: table_booking_form
-  - active_loop: table_booking_form
-  - slot_was_set:
-    - requested_slot: num_people
-  - intent: inform_table_booking
-    entities:
-    - num_people: '6'
-  - slot_was_set:
-    - num_people: '6'
-  - action: table_booking_form
-  - slot_was_set:
-    - num_people: '6'
-  - slot_was_set:
-    - requested_slot: time
-  - intent: inform_table_booking
-    entities:
-    - time: 8:30
-  - slot_was_set:
-    - time: 8:30
-  - action: table_booking_form
-  - slot_was_set:
-    - time: 8:30
-  - slot_was_set:
-    - requested_slot: inside_outside
-  - intent: inform_table_booking
-    entities:
-    - inside_outside: inside
-  - slot_was_set:
-    - inside_outside: inside
-  - action: table_booking_form
-  - slot_was_set:
-    - inside_outside: inside
-  - slot_was_set:
-    - requested_slot: client_name
-  - intent: inform_client_name
-    entities:
-    - client_name: Luca
-  - slot_was_set:
-    - client_name: Luca
-  - action: table_booking_form
-  - slot_was_set:
-    - client_name: Luca
-  - slot_was_set:
-    - requested_slot: null
-  - active_loop: null
-  - action: utter_table_slots
-
-- story: interactive_story_1
+# happy path, mostly system initiative
+- story: table_1
   steps:
   - intent: book_table
   - action: table_booking_form
@@ -189,12 +40,14 @@ stories:
     - requested_slot: time
   - intent: inform_table_booking
     entities:
-    - time: 9:00
+    - time: '2024-02-04T20:00:00.000+01:00'
   - slot_was_set:
-    - time: 9:00
+    - time: '2024-02-04T20:00:00.000+01:00'
   - action: table_booking_form
   - slot_was_set:
-    - time: 9:00
+    - time: 20:00
+  - slot_was_set:
+    - date: '2024-02-04'
   - slot_was_set:
     - requested_slot: inside_outside
   - intent: inform_table_booking
@@ -209,19 +62,22 @@ stories:
     - requested_slot: client_name
   - intent: inform_client_name
     entities:
-    - client_name: Raghav
+    - client_name: John
   - slot_was_set:
-    - client_name: Raghav
+    - client_name: John
   - action: table_booking_form
   - slot_was_set:
-    - client_name: Raghav
+    - client_name: John
   - slot_was_set:
     - requested_slot: null
   - active_loop: null
   - action: utter_table_slots
 
-- story: interactive_story_1
+# slightly unhappy
+- story: table_2
   steps:
+  - intent: greet
+  - action: utter_greet
   - intent: book_table
   - action: table_booking_form
   - active_loop: table_booking_form
@@ -229,22 +85,34 @@ stories:
     - requested_slot: num_people
   - intent: inform_table_booking
     entities:
-    - num_people: '2'
+    - num_people: '7'
   - slot_was_set:
-    - num_people: '2'
+    - num_people: '7'
   - action: table_booking_form
   - slot_was_set:
-    - num_people: '2'
+    - num_people: null
+  - slot_was_set:
+    - requested_slot: num_people
+  - intent: inform_table_booking
+    entities:
+    - num_people: '4'
+  - slot_was_set:
+    - num_people: '4'
+  - action: table_booking_form
+  - slot_was_set:
+    - num_people: '4'
   - slot_was_set:
     - requested_slot: time
   - intent: inform_table_booking
     entities:
-    - time: 7:00
+    - time: '2024-02-05T19:30:00.000+01:00'
   - slot_was_set:
-    - time: 7:00
+    - time: '2024-02-05T19:30:00.000+01:00'
   - action: table_booking_form
   - slot_was_set:
-    - time: 7:00
+    - time: 19:30
+  - slot_was_set:
+    - date: '2024-02-05'
   - slot_was_set:
     - requested_slot: inside_outside
   - intent: inform_table_booking
@@ -259,13 +127,160 @@ stories:
     - requested_slot: client_name
   - intent: inform_client_name
     entities:
-    - client_name: Sophia
+    - client_name: Chris
   - slot_was_set:
-    - client_name: Sophia
+    - client_name: Chris
   - action: table_booking_form
   - slot_was_set:
-    - client_name: Sophia
+    - client_name: Chris
   - slot_was_set:
     - requested_slot: null
   - active_loop: null
   - action: utter_table_slots
+  - intent: thank
+  - action: utter_youre_welcome
+
+# unhappy path, many questions and changes from the user
+- story: table_3
+  steps:
+  - intent: book_table
+  - action: table_booking_form
+  - active_loop: table_booking_form
+  - slot_was_set:
+    - requested_slot: num_people
+  - intent: faq
+  - action: utter_faq
+  - action: table_booking_form
+  - slot_was_set:
+    - requested_slot: num_people
+  - intent: inform_table_booking
+    entities:
+    - num_people: '6'
+  - slot_was_set:
+    - num_people: '6'
+  - action: table_booking_form
+  - slot_was_set:
+    - num_people: '6'
+  - slot_was_set:
+    - requested_slot: time
+  - intent: change_table_booking
+    entities:
+    - num_people: '4'
+  - slot_was_set:
+    - num_people: '4'
+  - slot_was_set:
+    - num_people: '4'
+  - action: table_booking_form
+  - slot_was_set:
+    - num_people: '4'
+  - slot_was_set:
+    - requested_slot: time
+  - intent: faq
+  - action: utter_faq
+  - action: table_booking_form
+  - slot_was_set:
+    - requested_slot: time
+  - intent: inform_table_booking
+    entities:
+    - time: '2024-02-04T19:30:00.000+01:00'
+  - slot_was_set:
+    - time: '2024-02-04T19:30:00.000+01:00'
+  - action: table_booking_form
+  - slot_was_set:
+    - time: 19:30
+  - slot_was_set:
+    - date: '2024-02-04'
+  - slot_was_set:
+    - requested_slot: inside_outside
+  - intent: change_table_booking
+    entities:
+    - time: '2024-02-05T19:30:00.000+01:00'
+    - pizza_size: 7pm
+  - slot_was_set:
+    - pizza_size: 7pm
+  - slot_was_set:
+    - time: '2024-02-05T19:30:00.000+01:00'
+  - slot_was_set:
+    - time: '2024-02-05T19:30:00.000+01:00'
+  - action: table_booking_form
+  - slot_was_set:
+    - time: 19:30
+  - slot_was_set:
+    - date: '2024-02-05'
+  - slot_was_set:
+    - requested_slot: inside_outside
+  - intent: faq
+  - action: utter_faq
+  - action: table_booking_form
+  - slot_was_set:
+    - requested_slot: inside_outside
+  - intent: inform_table_booking
+    entities:
+    - inside_outside: outside
+  - slot_was_set:
+    - inside_outside: outside
+  - action: table_booking_form
+  - slot_was_set:
+    - inside_outside: outside
+  - slot_was_set:
+    - requested_slot: client_name
+  - intent: inform_table_booking
+    entities:
+    - client_name: Peter
+  - slot_was_set:
+    - client_name: Peter
+  - action: table_booking_form
+  - slot_was_set:
+    - client_name: Peter
+  - slot_was_set:
+    - requested_slot: null
+  - active_loop: null
+  - action: utter_table_slots
+  - intent: thank
+  - action: utter_youre_welcome
+
+# overinformative user
+- story: table_4
+  steps:
+  - intent: inform_table_booking
+    entities:
+    - time: '2024-02-04T19:00:00.000+01:00'
+  - slot_was_set:
+    - time: '2024-02-04T19:00:00.000+01:00'
+  - action: table_booking_form
+  - active_loop: table_booking_form
+  - slot_was_set:
+    - time: 19:00
+  - slot_was_set:
+    - date: '2024-02-04'
+  - slot_was_set:
+    - requested_slot: num_people
+  - intent: inform_table_booking
+    entities:
+    - num_people: '3'
+    - inside_outside: outside
+  - slot_was_set:
+    - num_people: '3'
+  - slot_was_set:
+    - inside_outside: outside
+  - action: table_booking_form
+  - slot_was_set:
+    - num_people: '3'
+  - slot_was_set:
+    - inside_outside: outside
+  - slot_was_set:
+    - requested_slot: client_name
+  - intent: inform_client_name
+    entities:
+    - client_name: Luca
+  - slot_was_set:
+    - client_name: Luca
+  - action: table_booking_form
+  - slot_was_set:
+    - client_name: Luca
+  - slot_was_set:
+    - requested_slot: null
+  - active_loop: null
+  - action: utter_table_slots
+  - intent: thank
+  - action: utter_youre_welcome
