--- a/dev/domain.yml
+++ b/dev/domain.yml
@@ -1,23 +1,29 @@
 version: '3.1'
 intents:
-- add_more_pizza
+# general
 - affirm
-- buy_pizza
 - deny
 - faq
 - goodbye
 - greet
-- inform_pizza_order
-- order_readable
 - out_of_scope
-- pizza_order_form
+# pizza order
+- add_more_pizza
+- buy_pizza
+- order_readable
+- inform_pizza_order
 - total_order
 - multiple_orders
 - what_pizza_you_have
 - what_size_you_have
+# forms
+- pizza_order_form
+
 entities:
 - pizza_type
 - pizza_size
+- pizza_amount
+
 slots:
   pizza_type:
     type: text
@@ -43,14 +49,15 @@ slots:
     mappings:
     - type: custom
 
-#TODO: check if ok to set slot in form if not required
+
 forms:
   pizza_order_form:
     required_slots:
     - pizza_type
-    - pizza_amount
     - pizza_size
+
 actions:
+# responses
 - utter_all_set
 - utter_greet
 - utter_goodbye
@@ -62,13 +69,16 @@ actions:
 - utter_out_of_scope
 - utter_ask_continue
 - utter_do_one_by_one
+# custom actions
 - validate_pizza_order_form
 - action_reset_slots
 - action_reset_all_slots
 - action_total_order_add
 - action_pizza_type_information
 - action_pizza_size_information
+# validation action
 - action_validate_slot_mappings
+
 responses:
   utter_greet:
   - text: Welcome to DoughVinci, where art meets appetite. How can I assist you today?
@@ -108,6 +118,7 @@ responses:
   - text: Alright, your final order is {order_readable}.
   utter_do_one_by_one:
   - text: Unfortunately I am just a small town assistant, living in a complex world. I cannot process multiple orders at once. Please give me your orders again one by one.
+
 session_config:
   session_expiration_time: 60
   carry_over_slots_to_new_session: true
